--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,4 @@
-This is the footer. Include anything you'd like here, like a link to an <a class="internal-link" href="/about">About</a> page.
+<a class="internal-link" href="/about">about</a>
+<br />
+<br />
+made with entropy by dreat.
